@@ -49,7 +49,16 @@ WHAT IS NEW?
     * "slice x", "slice y", "set slice x", "set slice y", "slice width",
       "slice height", "set horiz align", "set vert align",
       "set horiz anchor", "set vert anchor", "free slice",
-      "first child", "next sibling" [James]
+      "first child", "next sibling", "create container", "set parent",
+      "check parentage", "slice screen x", "slice screen y",
+      "slice is container", "create rect", "slice is rect",
+      "set slice width", "set slice height", "get rect style",
+      "set rect style", "get rect fgcol", "set rect fgcol",
+      "get rect bgcol", "set rect bgcol", "get rect border",
+      "set rect border", "get rect trans", "set rect trans",
+      "first container child", "next container child",
+      "first sprite child", "next sprite sibling", "first rect child",
+      "next rect sibling", "realign slice", "center slice" [James]
     * "number from string" [James]
 
   * Vikings of Midgard
